<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_screen_horizontal"
        android:paddingVertical="@dimen/padding_screen_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_categories"
            android:textAppearance="@style/TextAppearance.PocketLedger.ScreenTitle" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittextSearchCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_section"
            android:hint="@string/hint_search_category"
            android:inputType="text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputCategoryNameLayout"
            style="@style/Widget.PocketLedger.TextInput.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_field">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_category_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddCategory"
            style="@style/Widget.PocketLedger.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_field"
            android:text="@string/label_add_category" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_section"
            android:nestedScrollingEnabled="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBack"
            style="@style/Widget.PocketLedger.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_section"
            android:text="@string/action_back" />
    </LinearLayout>
</ScrollView>
